[package]
name = "neon-rtos"
version = "0.1.1"
edition = "2021"
description = "A real-time operating system for ARM Cortex-M or RISC-V microcontrollers"
license = "MIT OR Apache-2.0"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*",
]
exclude = [
    "target/**/*",
    "examples/**/target/**/*",
]


[features]
default = ["cortex_m3"]
cortex_m3 = ["cortex-m", "cortex-m-rt", "alloc-cortex-m"]
# riscv = ["riscv-rt"] # 未来添加 RISC-V 支持时取消注释

[dependencies.cortex-m]
version = "0.7.7"
optional = true

[dependencies.cortex-m-rt]
version = "0.7.3"
optional = true


[dependencies.alloc-cortex-m]
version = "0.4.4"
optional = true


# [dependencies.riscv-rt]
# version = "0.x.x"
# optional = true



[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
