[package]
name = "neon-rtos"
version = "0.1.3"
edition = "2021"
description = "A real-time operating system for ARM Cortex-M or RISC-V microcontrollers"
license = "MIT OR Apache-2.0"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*",
]
exclude = [
    "target/**/*",
    "examples/**/target/**/*",
]


[features]
default = ["cortex_m3"]
cortex_m3 = ["cortex-m", "cortex-m-rt", "alloc-cortex-m", "spin"]
riscv = ["riscv-rt", "embedded-alloc"]

[dependencies.cortex-m]
version = "0.7.7"
optional = true

[dependencies.cortex-m-rt]
version = "0.7.3"
optional = true


[dependencies.alloc-cortex-m]
version = "0.4.4"
optional = true

[dependencies.spin]
version = "0.9.8"
optional = true

[dependencies.riscv-rt]
version = "0.12.2"
optional = true

[dependencies.embedded-alloc]
version = "0.6.0"
optional = true


[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
